Description: In the iOS calc app it is not possible to select a range of cells with the finger. As a result it is also not possible to "auto fill" subsequent cells by draging the corner of a selection. Steps to Reproduce: 1. Open/create a calc document in the iOS app 2. Insert "1" into "A1", "2" into "A2" and "3" into "A3" 3. Try to select all cells 4. Bonus point: try to drag the selection to auto-fill A4, A5, etc. Actual Results: It's not possible to select multiple cells in the iOS calc app. Expected Results: It should be possible to select multiple cells with a finger and one should be able to drag a corner of the selection to auto-fill subsequent cells. Reproducible: Always User Profile Reset: No Additional Info: Apple numbers solves this quite nice by offering a "Cells"-button with multiple options. Maybe something like this should be implemented in the iOS app too.
Created attachment 151566 [details] Cells can be selected by using the blue dot in the corner
Created attachment 151567 [details] After taping on "fill cells automatically" the selection becomes orange and the behaviour changes accordingly
Moving to NEW as agreed in the ESC meeting
At least in the latest build in TestFlight, 4.1.44, it is possible to adjust a range with a touch gesture. When you tap+drag on an unselected cell, the document pans, but when you do it on a selected cell (range), you can adjust the selection. With just one cell selected it requires some careful tapping to start the selection size adjustment, but it can be done.
Tomaž Vajngerl committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/online/+/42c4c864feaa3559c1384b64a893fa6d24a123ac%5E%21 tdf#125425 add cell selection markers and cell auto fill marker
A polite ping to Tomaz Vajngerl: Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing? Thanks
This issue is fixed since quite some time and can be closed. Just tested with 4.2 (35) - all good, works like a charm. Thanks a lot to the Collabora team and especially Quikee for taking care of this issue!