tdf#125425 add cell selection markers and cell auto fill marker

This replaces the standard text selection marker with a cell
selection markers to resize the cell selection. This looks and
behaves better for cells in Calc and it is also easier to deal
with.

Additionally add auto fill marker to perform the auto fill action
on the cells. This was not possible to do previously unless you
hit an invisible part of the cell selection, which is not
convenient when using touch.

Change-Id: Ia02d03b7b8e8d98412ea98eb92fb47d1505ef979
Reviewed-on: https://gerrit.libreoffice.org/76494
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 42c4c864feaa3559c1384b64a893fa6d24a123ac)
Reviewed-on: https://gerrit.libreoffice.org/76572
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>