tools/KitClient.cpp
@@ -85,6 +85,8 @@ extern "C"
             CASE(CONTEXT_CHANGED);
             CASE(SIGNATURE_STATUS);
             CASE(PROFILE_FRAME);
+            CASE(CELL_SELECTION_AREA);
+            CASE(CELL_AUTO_FILL_AREA);
 #undef CASE
         }
         std::cout << " payload: " << payload << std::endl;
